src/objects/Id_Automatismi_Milestone__c.object
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <fields>
        <fullName>Entitlement_Id__c</fullName>
        <label>Entitlement Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Manager_Default_Mail__c</fullName>
        <label>Manager Default Mail</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Milestone_First_Status_New__c</fullName>
        <label>Milestone First Status New</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Milestone_First_Status_Reassigned__c</fullName>
        <label>Milestone First Status Reassigned</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Milestone_First_Status_Reply_Received__c</fullName>
        <label>Milestone First Status Reply Received</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Milestone_Second_Status_New__c</fullName>
        <label>Milestone Second Status New</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Milestone_Second_Status_Reassigned__c</fullName>
        <label>Milestone Second Status Reassigned</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Milestone_Second_Status_Reply_Received__c</fullName>
        <label>Milestone Second Status Reply Received</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Record_Type_Notify_Me__c</fullName>
        <label>Record Type Notify Me</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <label>Id Automatismi Milestone</label>
</CustomObject>